--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,9 @@ collections:
     profile:
         output: false
         title: Profile
+    projects:
+        output: false
+        title: Projects
     skills:
         output: false
         title: Skills
